--- a/scss/component/_index.scss
+++ b/scss/component/_index.scss
@@ -1,5 +1,14 @@
 @import './butt';
 @import './form';
-@import './grid';
 @import './nav';
 @import './image';
+@import './grid';
+@import './media'
+
+
+
+
+
+//component button imports
+
+//@import '../utilities/variables';
