--- a/scss/component/_butt.scss
+++ b/scss/component/_butt.scss
@@ -1,4 +1,4 @@
-@import '../utilities/variables';
+
 
 .btn {
     margin-top: 15px;
@@ -7,9 +7,17 @@
     border: none;
     padding: 10px 0;
     text-transform: uppercase;
-    border-radius: 5px;  
+    border-radius: 5px; 
     
+    //media break
+    @media #{$break-z} {
+         background-color: rgb(12, 43, 12);
+       }
     
+    //&:hover {
+     // color: black;
+     // filter: brightness(150%);
+   // }
   }
   
   .default {
