--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,10 @@
-@import './base/index';
-@import './component/index';
+//reordering imports
+
+
+
 @import './utilities/index';
+
+@import './base/index';
+
+@import './component/index';
+
