--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -18,7 +18,7 @@ $frog-green: #88d9a0;
 
 //media query breakpoint
 
-$break-z : '768px';
+$break-z : '(min-width: 768px)';
 
 
 // @media #{$break-z} {
